--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,20 +5,17 @@
         android:icon="@drawable/ic_home"
         android:title="@string/explore_fragment"/>
 
-    <item
-        android:id="@+id/news_fragment"
-        android:icon="@drawable/ic_article"
-        android:title="@string/news_fragment"/>
 
     <item
         android:id="@+id/anime_list_fragment"
-        android:icon="@drawable/ic_baseline_list_alt_24"
+        android:icon="@drawable/ic_baseline_ondemand_video_24"
         android:title="@string/anime_list_fragment"/>
 
     <item
-        android:id="@+id/shopping_fragment"
-        android:icon="@drawable/ic_baseline_shopping_cart_24"
-        android:title="@string/shopping_fragment"/>
+        android:id="@+id/manga_list_fragment"
+        android:icon="@drawable/ic_baseline_menu_book_24"
+        android:title="@string/manga_list"/>
+
 
     <item
         android:id="@+id/profile_fragment"
