--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -76,7 +76,11 @@
     <fragment
         android:id="@+id/searchListFragment"
         android:name="com.omnicoder.anichan.UI.Fragments.SearchListFragment"
-        android:label="SearchListFragment" />
+        android:label="SearchListFragment" >
+        <argument
+            android:name="isAnimeList"
+            app:argType="boolean" />
+    </fragment>
     <activity
         android:id="@+id/mangaRankingActivity"
         android:name="com.omnicoder.anichan.UI.Activities.MangaRankingActivity"
@@ -95,6 +99,15 @@
         android:id="@+id/searchActivity"
         android:name="com.omnicoder.anichan.UI.Activities.SearchActivity"
         android:label="SearchActivity" />
+    <fragment
+        android:id="@+id/manga_list_fragment"
+        android:name="com.omnicoder.anichan.UI.Fragments.MangaListFragment"
+        android:label="manga_list_fragment"
+        tools:layout="@layout/fragment_manga_list" >
+        <action
+            android:id="@+id/action_manga_list_fragment_to_searchListFragment"
+            app:destination="@id/searchListFragment" />
+    </fragment>
 
 
 </navigation>
