--- a/app/src/main/res/layout/add_anime_bottom_sheet.xml
+++ b/app/src/main/res/layout/add_anime_bottom_sheet.xml
@@ -15,9 +15,9 @@
         android:layout_marginEnd="16dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_add"
-        app:layout_constraintBottom_toBottomOf="@+id/editVolumes"
+        app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editVolumes" />
+        app:layout_constraintTop_toTopOf="@+id/editText" />
 
     <ImageButton
         android:id="@+id/minusButton"
