--- a/app/src/main/res/layout/activity_view_themes.xml
+++ b/app/src/main/res/layout/activity_view_themes.xml
@@ -81,7 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
-        tools:listitem="@layout/list_item_layout" />
+        tools:listitem="@layout/anime_list_item_layout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
