--- a/app/src/main/res/layout/list_sort_dialog.xml
+++ b/app/src/main/res/layout/list_sort_dialog.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     style="@style/BottomSheetDialog"
-    android:background="@drawable/dialog_background"
-    >
+    android:background="@drawable/dialog_background">
 
     <TextView
         android:id="@+id/textView5"
@@ -61,9 +58,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="CANCEL"
-        android:textSize="17sp"
         android:textColor="@color/buttonBlue"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ok"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
@@ -73,9 +72,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="OK"
         android:textColor="@color/buttonBlue"
         android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
