--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -380,11 +380,9 @@
         android:layout_marginRight="16dp"
         android:inflatedId="@id/videoViewStub"
         android:layout="@layout/video_view_stub"
-        app:layout_constraintTop_toBottomOf="@+id/recommendationRv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-      />
+        app:layout_constraintTop_toBottomOf="@id/view7" />
 
     <TextView
         android:id="@+id/textView26"
@@ -397,7 +395,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view7" />
+        app:layout_constraintTop_toBottomOf="@id/videoViewStub" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/relatedRv"
