--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -128,4 +128,10 @@
         <item name="android:popupBackground">@color/contentBackground</item>
         <item name="android:paddingRight">4dp</item>
     </style>
+
+
+
+    <style name="circularImageView" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
