Removed duplicate Models folder

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -118,4 +118,15 @@
     <action android:id="@+id/moveToParentFragment"
         app:destination="@id/profile_fragment"/>
 
+
+
+    <fragment
+        android:id="@+id/viewFavoritesFragment"
+        android:name="com.omnicoder.anichan.ui.fragments.profileFragments.ViewFavoritesFragment"
+        android:label="ViewFavoritesFragment" />
+
+    <action android:id="@+id/moveToFavoritesFragment"
+        app:destination="@id/viewFavoritesFragment"/>
+
+
 </navigation>
