--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -40,6 +40,9 @@
             android:name="username"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_profile_fragment_to_viewFavoritesFragment"
+            app:destination="@id/viewFavoritesFragment" />
     </fragment>
 
     <fragment
