--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgWhite"
-    tools:context=".ui.activities.ViewAnimeActivity">
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bgWhite"
-    android:layout_marginBottom="45dp"
-    tools:context=".ui.fragments.ProfileFragment">
+    tools:context=".ui.fragments.AccountFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
@@ -31,27 +22,12 @@
             android:background="@color/bgWhite"
             app:contentInsetStartWithNavigation="0dp"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:menu="@menu/profile_fragment_menu"
-            app:title="Profile" />
+            app:title="Account" />
 
-
-     </com.google.android.material.appbar.AppBarLayout>
-
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/profileImageView"
-        android:layout_width="@dimen/user_profile_image_width_and_height"
-        android:layout_height="@dimen/user_profile_image_width_and_height"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:scaleType="centerCrop"
-        android:elevation="2dp"
-        app:shapeAppearance="@style/circularImageView"
-        android:src="@drawable/demon_slayer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appbar_layout" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/userDetailsView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -69,7 +45,7 @@
             android:fontFamily="@font/bold"
             android:text="Kinochan"
             android:textColor="@color/listItemTitleTextColor"
-            android:textSize="16sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -97,11 +73,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="5dp"
             android:text="Denmark"
             android:textColor="@color/listItemTitleTextColor"
-            android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
             app:layout_constraintStart_toEndOf="@+id/locationView2"
             app:layout_constraintTop_toBottomOf="@+id/userNameView" />
 
@@ -125,7 +101,7 @@
             android:layout_marginTop="8dp"
             android:text="Joined"
             android:textColor="@color/listItemTitleTextColor"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/joinedView2"
             app:layout_constraintTop_toBottomOf="@+id/locationView" />
 
@@ -141,53 +117,43 @@
             app:layout_constraintStart_toEndOf="@+id/imageView8"
             app:layout_constraintTop_toBottomOf="@+id/locationView" />
 
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/bgWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/profileImageView"
+        android:layout_width="@dimen/account_profile_image_width_and_height"
+        android:layout_height="@dimen/account_profile_image_width_and_height"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="18dp"
+        android:elevation="2dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/demon_slayer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
-        app:tabBackground="@color/bgWhite"
-        app:tabIndicatorColor="@color/viewAnimeMainTextColor"
-        app:tabMode="auto"
-        app:tabSelectedTextColor="@color/viewAnimeMainTextColor"
-        app:tabTextColor="@color/textColor">
+        app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
+        app:shapeAppearance="@style/circularImageView" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Stats" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Friends" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Favorites" />
-
-    </com.google.android.material.tabs.TabLayout>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
+    <View
+        android:id="@+id/view10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/profileImageView" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.core.widget.NestedScrollView>
