--- a/app/src/main/res/xml/app_preference.xml
+++ b/app/src/main/res/xml/app_preference.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <SwitchPreferenceCompat
+        android:key="dark_mode"
+        android:title="Dark Mode"
+        android:summary="Turn On/Off Dark theme"
+        android:icon="@drawable/ic_baseline_dark_mode_24" />
+
+    <SwitchPreferenceCompat
+        android:key="nsfw"
+        android:title="Show NSFW content"
+        android:summary="Show/Hide NSFW content"
+        android:icon="@drawable/ic_age_limit" />
 
 </PreferenceScreen>
