--- a/app/src/main/res/layout/account_list_item_view.xml
+++ b/app/src/main/res/layout/account_list_item_view.xml
@@ -21,26 +21,26 @@
         android:id="@+id/account_list_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:ellipsize="marquee"
+        android:textColor="@color/listItemTitleTextColor"
         android:singleLine="true"
         android:text="Do you like this app?"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/account_list_icon"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@tools:sample/full_names"
-        />
+        tools:text="@tools:sample/full_names" />
 
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/account_list_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
@@ -48,8 +48,8 @@
         android:fadingEdge="horizontal"
         android:maxLines="2"
         android:text="Maybe you do"
-        android:textSize="12sp"
         android:textColor="?android:attr/textColorSecondary"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/account_list_icon"
