--- a/app/src/main/res/layout/explore_anime_fragment.xml
+++ b/app/src/main/res/layout/explore_anime_fragment.xml
@@ -58,6 +58,7 @@
             android:id="@+id/upcoming_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
@@ -255,17 +256,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/upcomingView" />
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:adSize="BANNER"
-            app:adUnitId="@string/testId"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recommendationView"
             android:layout_width="match_parent"
@@ -280,6 +270,18 @@
             tools:listitem="@layout/layout">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+
+        <com.omnicoder.anichan.views.ads.TemplateView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            app:gnt_template_type="@layout/gnt_small_template_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
 
 
 
