--- a/app/src/main/res/layout/explore_manga.xml
+++ b/app/src/main/res/layout/explore_manga.xml
@@ -121,6 +121,17 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
+        <com.omnicoder.anichan.views.ads.TemplateView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            app:gnt_template_type="@layout/gnt_small_template_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/manhuaView" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
