--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,6 +5,8 @@
         <attr name="item_title" format="reference"/>
         <attr name="item_description" format="reference"/>
     </declare-styleable>
-
+    <declare-styleable name="TemplateView">
+        <attr name="gnt_template_type" format="reference"/>
+    </declare-styleable>
 
 </resources>
