--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.profileFragments.FavoritesFragment">
+    tools:context=".ui.fragments.profile.FavoritesFragment">
 
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.profileFragments.FavoritesFragment">
+    tools:context=".ui.fragments.profile.FavoritesFragment">
 
     <TextView
         android:id="@+id/anime"
