--- a/app/src/main/res/layout/manga_statistics.xml
+++ b/app/src/main/res/layout/manga_statistics.xml
@@ -7,7 +7,7 @@
     android:elevation="3dp"
     android:paddingBottom="16dp"
     android:background="@color/bgWhite"
-    tools:context=".ui.fragments.profileFragments.StatsFragment">
+    tools:context=".ui.fragments.profile.StatsFragment">
 
 
     <View
