--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,16 @@
         app:layout_constraintTop_toBottomOf="@+id/message"
         tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage" />
 
+    <ViewStub
+        android:id="@+id/progressBarViewStub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inflatedId="@+id/progressBar"
+        android:layout="@layout/mal_progress_bar"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/message" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
