--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -78,11 +78,14 @@
     <color name="gnt_ad_green">#3A6728</color>
     <color name="gnt_gray">#808080</color>
     <color name="gnt_outline">#E0E0E0</color>
-    
-    
-    
-    
-    
-    
-    
+
+    <color name="mal_blue">#2e51a2</color>
+
+
+
+
+
+
+
+
 </resources>
