added popup menu

--- a/app/src/main/res/layout/activity_view_character.xml
+++ b/app/src/main/res/layout/activity_view_character.xml
@@ -47,6 +47,19 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
+    <ImageButton
+        android:id="@+id/menuButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="16dp"
+        android:src="@drawable/ic_baseline_menu_24"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/characterImageView"
         android:layout_width="104dp"
