--- a/app/src/main/res/layout/activity_view_person.xml
+++ b/app/src/main/res/layout/activity_view_person.xml
@@ -58,6 +58,19 @@
             app:layout_constraintTop_toBottomOf="@+id/backButton"
             app:shapeAppearanceOverlay="@style/posterView" />
 
+        <ImageButton
+            android:id="@+id/menuButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="16dp"
+            android:src="@drawable/ic_baseline_menu_24"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
         <TextView
             android:id="@+id/nameView"
             android:layout_width="0dp"
