fixed status bar color

--- a/app/src/main/res/layout/developer_dialog.xml
+++ b/app/src/main/res/layout/developer_dialog.xml
@@ -37,6 +37,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="@string/developed_by"
+        android:textColor="@color/listItemTitleTextColor"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,6 +50,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:text="@string/message_by_developer"
+        android:textColor="@color/listItemTitleTextColor"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +64,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
         android:text="@string/e_mail"
+        android:textColor="@color/listItemTitleTextColor"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
