--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:fontFamily="@font/gang_of_three"
+        android:fontFamily="@font/myanimelist"
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/white"
