--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="18dp"
         android:elevation="2dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/demon_slayer"
+        android:src="@mipmap/ic_launcher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
         app:shapeAppearance="@style/circularImageView" />
