--- a/app/src/main/res/layout/trending_viewpager_item.xml
+++ b/app/src/main/res/layout/trending_viewpager_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/trendingAnime"
+<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/trendingAnime"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="311dp"
@@ -14,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/fire_hashira"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +39,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="8.85"
         android:textColor="#ffef00"
         android:textSize="12sp"
         app:drawableStartCompat="@drawable/ic_baseline_star_24"
@@ -60,8 +57,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/backgroundPoster"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/posterView"
-        app:srcCompat="@drawable/demon_slayer" />
+        app:shapeAppearanceOverlay="@style/posterView"/>
 
     <TextView
         android:id="@+id/animeTitle"
@@ -74,7 +70,6 @@
         android:fontFamily="@font/bold"
         android:gravity="start"
         android:maxLines="2"
-        android:text="Anime Title"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -92,7 +87,6 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="start"
         android:maxLines="3"
-        android:text="TV"
         android:textAllCaps="true"
         android:textColor="#bfffffff"
         android:textSize="12sp"
@@ -110,7 +104,6 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="start"
         android:maxLines="2"
-        android:text="Action,Historical,military"
         android:textAllCaps="true"
         android:textColor="#bfffffff"
         android:textSize="12sp"
