--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -2,8 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <bitmap
-            android:gravity="center"
-            android:src="@drawable/splashscreen"/>
+            android:gravity="center"/>
     </item>
 
 </layer-list>
