removed scan button and fixed no elevation

--- a/app/src/main/res/layout/anime_theme_layout.xml
+++ b/app/src/main/res/layout/anime_theme_layout.xml
@@ -7,8 +7,8 @@
     android:layout_margin="8dp"
     android:background="@drawable/white_rectangle"
     android:maxLines="3"
+    android:elevation="5dp"
     android:padding="16dp"
-    android:text="Mixed Nuts (ミックスナッツ) by Official HIGE DANdism (Official髭男dism)"
     android:textColor="@color/listItemTitleTextColor"
     android:textSize="16sp"
     android:textStyle="bold"
