--- a/app/src/main/res/layout/anime_list_fragments.xml
+++ b/app/src/main/res/layout/anime_list_fragments.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.animeList.CompletedFragment">
+    tools:context=".ui.fragments.animeList.CompletedAnimeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
