--- a/app/src/main/res/layout/list_sort_dialog.xml
+++ b/app/src/main/res/layout/list_sort_dialog.xml
@@ -49,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Last Updated"
+            android:checked="true"
             android:textSize="18sp" />
     </RadioGroup>
 
