--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,4 +9,23 @@
         <attr name="gnt_template_type" format="reference"/>
     </declare-styleable>
 
+    <declare-styleable name="DonutProgressView">
+        <attr name="donut_strokeWidth" format="dimension"/>
+        <attr name="donut_strokeCap" format="enum">
+            <enum name="round" value="0"/>
+            <enum name="butt" value="1"/>
+        </attr>
+        <attr name="donut_bgLineColor" format="color"/>
+        <attr name="donut_gapWidth" format="float"/>
+        <attr name="donut_gapAngle" format="float"/>
+        <attr name="donut_direction" format="enum">
+            <enum name="clockwise" value="0"/>
+            <enum name="anticlockwise" value="1"/>
+        </attr>
+        <attr name="donut_animateChanges" format="boolean"/>
+        <attr name="donut_animationInterpolator" format="reference"/>
+        <attr name="donut_animationDuration" format="integer"/>
+        <attr name="donut_cap" format="float"/>
+    </declare-styleable>
+
 </resources>
